[metadata]
name = report
author = XLAB d.o.o.
author-email = pypi@xlab.si
summary = Demo report generator
description-file = README.rst
home-page = https://github.com/xlab-si/demo-report-generator
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    report

[entry_points]
console_scripts =
    report = report.main:main

[wheel]
universal = 1

[pbr]
warnerrors = true
